--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "4.5.2",
     "bootstrap-social": "5.1.1",
+    "caniuse-lite": "^1.0.30001256",
     "cra-template": "1.1.2",
     "font-awesome": "4.7.0",
     "react": "^17.0.2",
